# lwndhrst.github.io

./: .clang-format  .gitignore  404.html  CMakeLists.txt  CNAME  README.md  _config.yml  about.md  flake.nix  index.html  index.md
.github/workflows/: static.yml
_layouts/: blog.html  home.html
_posts/: 2024-05-15-3d-boids-with-c-and-raylib.md  2024-05-15-3d-boids-with-raylib.md  2024-05-15-welcome-to-jekyll.markdown  2024-05-27-3d-boids-with-raylib.md
_site/: 404.html  feed.xml  index.html
_site/2024/05/15/: 3d-boids-with-c-and-raylib.html  3d-boids-with-raylib.html
_site/2024/05/27/: 3d-boids-with-raylib.html
_site/about/: index.html
_site/blog/: index.html
_site/boids/raylib/c-programming/2024/05/27/: 3d-boids-with-raylib.html
_site/c/raylib/boids/spatial-partitioning/2024/05/27/: 3d-boids-with-raylib.html
_site/jekyll/update/2024/05/15/: welcome-to-jekyll.html
src/: CMakeLists.txt  main.c
src/boids/: CMakeLists.txt  boids.c  boids.h  grid.c  grid.h  main.c
src/floppy-bat/: CMakeLists.txt  game.c  game.h  main.c  menu.c  menu.h  obstacles.c  obstacles.h  player.c  player.h
src/raylib-emscripten-base/: CMakeLists.txt  main.c
tools/: build.sh  configure.sh  run.sh
